// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckTag 组件测试 checked & defaultChecked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="t-tag t-tag--default t-tag--check t-tag--medium t-tag--checked"
      />
    </div>
  </body>,
  "container": <div>
    <span
      class="t-tag t-tag--default t-tag--check t-tag--medium t-tag--checked"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag 组件测试 disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square t-tag--disabled"
      />
    </div>
  </body>,
  "container": <div>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square t-tag--disabled"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag 组件测试 icon 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
      >
        <svg
          class="t-icon t-icon-discount"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            clip-rule="evenodd"
            d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
            fill="currentColor"
            fill-opacity="0.9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
    >
      <svg
        class="t-icon t-icon-discount"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          clip-rule="evenodd"
          d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
          fill="currentColor"
          fill-opacity="0.9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 24px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <a
            href="https://www.tencent.com/zh-cn"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            >
              超链接
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--dark t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--warning t-tag--dark t-tag--medium t-tag--square"
          >
            标签二
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--danger t-tag--dark t-tag--medium t-tag--square"
          >
            标签三
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--success t-tag--dark t-tag--medium t-tag--square"
          >
            标签四
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--light t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--warning t-tag--light t-tag--medium t-tag--square"
          >
            标签二
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--danger t-tag--light t-tag--medium t-tag--square"
          >
            标签三
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--success t-tag--light t-tag--medium t-tag--square"
          >
            标签四
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--outline t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--warning t-tag--outline t-tag--medium t-tag--square"
          >
            标签二
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--danger t-tag--outline t-tag--medium t-tag--square"
          >
            标签三
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--success t-tag--outline t-tag--medium t-tag--square"
          >
            标签四
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`delete.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            style="margin-right: 30px;"
          >
            可删除标签0
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
            style="margin-right: 30px;"
          >
            <svg
              class="t-icon t-icon-discount"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                clip-rule="evenodd"
                d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
                fill="currentColor"
                fill-opacity="0.9"
                fill-rule="evenodd"
              />
            </svg>
            可删除标签1
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square t-tag--disabled"
            style="margin-right: 30px;"
          >
            可删除标签2
            <svg
              class="t-icon t-icon-close t-tag__icon-close"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        style="display: flex; cursor: pointer;"
      >
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          可添加标签
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
  >
    <svg
      class="t-icon t-icon-discount"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        clip-rule="evenodd"
        d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
        fill="currentColor"
        fill-opacity="0.9"
        fill-rule="evenodd"
      />
    </svg>
    默认标签
  </span>
</DocumentFragment>
`;

exports[`long-text.jsx 1`] = `
<DocumentFragment>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square t-tag--ellipsis"
    style="max-width: 150px;"
  >
    <span
      class="t-tag--text"
    >
      默认超八个字超长文本标签超长省略文本标签
    </span>
  </span>
</DocumentFragment>
`;

exports[`selectable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <span
        class="t-tag t-tag--default t-tag--check t-tag--medium t-tag--checked"
      >
        选中
      </span>
    </div>
    <div
      class="t-space-item"
    >
      <span
        class="t-tag t-tag--default t-tag--check t-tag--medium"
      >
        未选
      </span>
    </div>
    <div
      class="t-space-item"
    >
      <span
        class="t-tag t-tag--default t-tag--check t-tag--medium t-tag--disabled"
      >
        禁用
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--dark t-tag--medium t-tag--square"
          >
            标签一
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--round"
            style="margin-right: 5px;"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--dark t-tag--medium t-tag--round"
          >
            标签一
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--mark"
          >
            标签一
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--primary t-tag--dark t-tag--medium t-tag--mark"
          >
            标签一
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-center t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--small t-tag--square t-size-s"
          >
            小型标签
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--medium t-tag--square"
          >
            默认标签
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--dark t-tag--large t-tag--square t-size-l"
          >
            大型标签
          </span>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-center t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-size-s t-tag--default t-tag--check t-tag--small"
          >
            小型标签
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-tag--default t-tag--check t-tag--medium"
          >
            默认标签
          </span>
        </div>
        <div
          class="t-space-item"
        >
          <span
            class="t-tag t-size-l t-tag--default t-tag--check t-tag--large"
          >
            大型标签
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
